--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
